# Bell

./: CMakeLists.txt  IMPROVEMENTS.txt  License.txt  README.md
Assets/: ObjToMat.cpp  ltc_amp.hdr  ltc_mat.hdr  unitSphere.fbx
Assets/Sponza/: sponzaPBR.obj.mat
Assets/Sponza/textures_pbr/: sponzaPBR.mtl
Examples/: CommandContext.cpp  PassRegistration.cpp
Include/Core/: BellLogging.hpp  Buffer.hpp  BufferView.hpp  ContainerUtils.hpp  HashUtils.hpp  Image.hpp  ImageView.hpp  Pipeline.hpp  Profiling.hpp  Sampler.hpp  Shader.hpp  ShaderResourceSet.hpp
Include/Engine/: AABB.hpp  AnalyticalImageBasedLightingTechnique.hpp  BlinnPhongTechnique.hpp  Bufferbuilder.h  BuildAccelerationStructuresTechnique.hpp  CPUImage.hpp  Camera.hpp  CascadeShadowMappingTechnique.hpp  CommandContext.hpp  CompositeTechnique.hpp  ConvolveSkyboxTechnique.hpp  DFGGenerationTechnique.hpp  DebugVisualizationTechnique.hpp  DefaultResourceSlots.hpp  DeferredAnalyticalLightingTechnique.hpp  DeferredProbeGITechnique.hpp  DownSampleColourTechnique.hpp  Engine.hpp  ForwardIBLTechnique.hpp  ForwardLightingCombinedTechnique.hpp  GBufferMaterialTechnique.hpp  GBufferTechnique.hpp  GeomUtils.h  GraphResolver.h  ImageBasedLightingTechnique.hpp  Instance.hpp  InstanceIDTechnique.hpp  LightFroxelationTechnique.hpp  LineariseDepthTechnique.hpp  NavigationMesh.hpp  OcclusionCullingTechnique.hpp  OverlayTechnique.hpp  PassTypes.hpp  PathTracingTechnique.hpp  PreDepthTechnique.hpp  RayTracedScene.hpp  RenderQueue.hpp  SSAOTechnique.hpp  Scene.h  SceneNavigator.hpp  (+16 more)
Include/RenderGraph/: ComputeTask.hpp  GraphicsTask.hpp  RenderGraph.hpp  RenderTask.hpp
Source/Core/: AccelerationStructures.cpp  AccelerationStructures.hpp  BarrierManager.cpp  BarrierManager.hpp  Buffer.cpp  BufferView.cpp  CommandContext.cpp  CommandContext.hpp  CommandPool.cpp  CommandPool.h  ConversionUtils.cpp  ConversionUtils.hpp  DescriptorManager.cpp  DescriptorManager.hpp  DeviceChild.hpp  Executor.hpp  GPUResource.hpp  Image.cpp  ImageView.cpp  MemoryManager.cpp  MemoryManager.hpp  PerFrameResource.hpp  Pipeline.cpp  RenderDevice.cpp  RenderDevice.hpp  RenderInstance.cpp  RenderInstance.hpp  Sampler.cpp  Shader.cpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderResourceSet.cpp  SwapChain.cpp  SwapChain.hpp
Source/Core/DX_12/: DX_12Buffer.cpp  DX_12Buffer.hpp  DX_12BufferView.cpp  DX_12BufferView.hpp  DX_12Executor.cpp  DX_12Executor.hpp  DX_12Image.cpp  DX_12Image.hpp  DX_12ImageView.cpp  DX_12ImageView.hpp  DX_12RenderDevice.cpp  DX_12RenderDevice.hpp  DX_12RenderInstance.cpp  DX_12RenderInstance.hpp  DX_12Shader.cpp  DX_12Shader.hpp  DX_12ShaderResourceSet.cpp  DX_12ShaderResourceSet.hpp  DX_12SwapChain.cpp  DX_12SwapChain.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp
Source/Core/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLBufferView.cpp  OpenGLBufferView.hpp  OpenGLImage.cpp  OpenGLImage.hpp  OpenGLImageView.cpp  OpenGLImageView.hpp  OpenGLRenderDevice.cpp  OpenGLRenderDevice.hpp  OpenGLRenderInstance.cpp  OpenGLRenderInstance.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLShaderResourceSet.hpp
Source/Core/Vulkan/: CommandPool.cpp  CommandPool.h  DescriptorManager.cpp  DescriptorManager.hpp  Handles.hpp  MemoryManager.cpp  MemoryManager.hpp  VulkanAccelerationStructures.cpp  VulkanAccelerationStructures.hpp  VulkanBarrierManager.cpp  VulkanBarrierManager.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanBufferView.cpp  VulkanBufferView.hpp  VulkanCommandContext.cpp  VulkanCommandContext.hpp  VulkanExecutor.cpp  VulkanExecutor.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanImageView.cpp  VulkanImageView.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderDevice.cpp  VulkanRenderDevice.hpp  VulkanRenderInstance.cpp  VulkanRenderInstance.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanShaderResourceSet.cpp  VulkanShaderResourceSet.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp
Source/Editor/: Editor.cpp  Editor.h  ImGuiNodeEditor.cpp  ImGuiNodeEditor.h  MeshPicker.cpp  MeshPicker.hpp  MeshesIMGUI.h  NodeIMGUI.h  imguifilebrowser.cpp  imguifilebrowser.h  main.cpp
Source/Engine/: AABB.cpp  Allocators.cpp  Allocators.hpp  AnalyticalImageBasedLightingTechnique.cpp  Animation.cpp  Animation.hpp  BVH.cpp  BVH.hpp  BlinnPhongTechnique.cpp  BuildAccelerationStructuresTechnique.cpp  CPUImage.cpp  Camera.cpp  CascadeShadowMappingTechnique.cpp  CommandContext.cpp  CompositeTechnique.cpp  ConvolveSkyboxTechnique.cpp  DFGGenerationTechnique.cpp  DebugVisualizationTechnique.cpp  DefaultResourceSlots.cpp  DeferredAnalyticalLightingTechnique.cpp  DeferredProbeGITechnique.cpp  DownSampleColourTechnique.cpp  Engine.cpp  ForwardIBLTechnique.cpp  ForwardLightingCombinedTechnique.cpp  GBufferMaterialTechnique.cpp  GBufferTechnique.cpp  GeomUtils.cpp  GraphResolver.h  ImageBasedLightingTechnique.cpp  InstanceIDTechnique.cpp  LightFroxelationTechnique.cpp  LineariseDepthTechnique.cpp  NavigationMesh.cpp  OcclusionCullingTechnique.cpp  OctTree.cpp  OctTree.hpp  OverlayTechnique.cpp  PBR.cpp  PBR.hpp  (+25 more)
Source/Engine/Shaders/: ActiveFroxels.comp  AlphaTestDepthOnly.frag  AnalyticalIBLDeferredTexture.frag  BasicVertexTransform.vert  BilaterialUpsample.comp  BilaterialUpsampleRGBA8.comp  BlendShapes.comp  BlinnPhongDeferredTexture.frag  Blit.frag  BlurX_Base.glsl  BlurX_Base.hlsl  BlurY_Base.glsl  BlurY_Base.hlsl  ClearSSRTileCounters.comp  ClusteredLighting.glsl  ClusteredLighting.hlsl  ColourMapping.hlsl  CompositeOverlay.frag  CompositeOverlayCombinedLightingSSAO.frag  CompositeOverlaySSAO.frag  CompositeOverlayTAA.frag  CompositeSSAO.frag  CubemapParallax.glsl  CubemapParallax.hlsl  DFGIBLDeferredTexturing.frag  DFGLUTIBLDeferredTexture.frag  DFGLutGenerate.comp  DebugAABB.frag  DebugAABB.vert  DebugVoxels.comp  DeferredAnalyticalLighting.comp  DeferredDFGIBL.frag  DeferredProbeGI.frag  DepthOnly.vert  Empty.frag  FinalComposite.frag  ForwardCombinedLighting.frag  ForwardIBL.frag  ForwardMaterial.vert  ForwardMaterialCombined.vert  (+93 more)
Source/RenderGraph/: ComputeTask.cpp  GraphicsTask.cpp  RenderGraph.cpp
